# sight

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  test_ws.go
.gemini/antigravity/: sight.md
agent-desktop/: .env  CHANGELOG.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agent-desktop/src/: App.tsx  AuditLogs.tsx  Settings.tsx
agent-desktop/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json  tauri.demo.conf.json  tauri.key  tauri.key.pub  tauri.prod.conf.json
agent-desktop/src-tauri/src/: lib.rs  local_db.rs  main.rs  rustdesk.rs  telemetry.rs  ws_client.rs
dashboard/: CHANGELOG.md  Dockerfile  next.config.ts  package-lock.json  package.json
dashboard/public/: config-prod.json  config.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentTable.tsx  LogsTable.tsx
dashboard/src/hooks/: useSightWebsocket.tsx
landing/: Dockerfile  config-demo.json  index.html  nginx.conf
mosquitto/: Dockerfile  mosquitto.conf
scripts/: build-demo-agent.bat  build-demo-agent.ps1  build-prod-agent.bat  build-prod-agent.ps1
server/: CHANGELOG.md  Dockerfile  go.mod  go.sum
server/cmd/sight/: main.go
server/internal/database/: db.go
server/internal/logger/: log.go
server/internal/mqtt/: broker.go
server/internal/state/: redis.go
server/releases/: updater.json
