[package]
name = "sight-agent"
version = "1.1.0"
description = "Remote Access Management Software"
authors = ["asanchez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

# Default environment variables
# These can be overridden at build time for demo/production
# For demo: SIGHT_SERVER_URL=wss://sight.sanchez.ph/ws
# For prod: SIGHT_SERVER_URL=wss://sight.avegabros.org/ws
